--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-image: url('images/pattern-background-desktop.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 80vh;
+  height: 60vh;
+  background-color: hsl(225, 100%, 94%);
   margin: 0;
+  font-family: 'Red Hat Display', sans-serif;
 }
 
 @media only screen and (max-width: 768px) {
@@ -13,10 +21,112 @@ body {
   }
 }
 
-.center-container{
-  
+h1{
+  font-weight: 900;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
+.text{
+  color: hsl(224, 23%, 55%);
+  text-align: center;
+}
+
+span{
+  color: hsl(224, 23%, 55%)
+}
+
+.center-container1{
+  display: grid;
+  place-items: center;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.center-container2{
+  display: grid;
+  place-items: center;
+  gap: 10px;
+  background-color: white;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.container {
+  display: flex;
+  align-items: center; /* Wyśrodkuj elementy w pionie */
+  justify-content: space-between; /* Rozmieść elementy na końcach kontenera */
+  width: 70%;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 10px;
+  background-color: hsl(225, 100%, 98%);
+}
+
+.container p{
+  font-weight:800;
+}
+
+.image {
+  align-self: center;
+  margin-right: 15px;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column; /* Ułóż <p> i <span> w kolumnie */
+  gap: 10px; /* Odstęp między <p> a <span> */
+}
+
+.link {
+  align-self: center;
+  margin-left: auto;
+  color: hsl(245, 75%, 52%);
+  font-weight: 900;
+}
+
+.link:hover{
+  color: hsl(245, 75%, 62%);
+  transition: 1s;
+}
+
+button{
+  background-color: hsl(245, 75%, 52%);
+  color: white;
+  height: 50px;
+  width: 70%;
+  border-radius: 10px;
+  border: none;
+  font-weight: 700;
+  box-shadow: 0px 10px 15px hsl(245, 75%, 82%);
+  margin-top: 25px;
+}
+
+button:hover{
+  background-color: hsl(245, 75%, 62%);
+  transition: 1s;
+  cursor: pointer;
+}
+
+.cancel{
+  text-decoration: none;
+  color: hsl(224, 23%, 55%);
+  margin-top: 30px;
+  margin-bottom: 50px;
+  font-weight: 900;
+}
+
+.cancel:hover{
+  color: hsl(224, 23%, 15%);
+  transition: 1s;
+}
+
+.attribution{
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+}
 /* 
 # Front-end Style Guide
 
