--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ span{
 
 .container {
   display: flex;
-  align-items: center; /* Wyśrodkuj elementy w pionie */
-  justify-content: space-between; /* Rozmieść elementy na końcach kontenera */
+  align-items: center;
+  justify-content: space-between;
   width: 70%;
   padding: 10px;
   margin-top: 20px;
@@ -75,8 +75,8 @@ span{
 
 .text-container {
   display: flex;
-  flex-direction: column; /* Ułóż <p> i <span> w kolumnie */
-  gap: 10px; /* Odstęp między <p> a <span> */
+  flex-direction: column;
+  gap: 10px;
 }
 
 .link {
@@ -127,39 +127,3 @@ button:hover{
   font-size: 18px;
   font-weight: 600;
 }
-/* 
-# Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-> 💡 These are just the design sizes. Ensure content is responsive and meets WCAG requirements by testing the full range of screen sizes from 320px to large screens.
-
-## Colors
-
-### Primary
-
-- Pale blue: hsl(225, 100%, 94%)
-- Bright blue: hsl(245, 75%, 52%)
-
-### Neutral
-
-- Very pale blue: hsl(225, 100%, 98%)
-- Desaturated blue: hsl(224, 23%, 55%)
-- Dark blue: hsl(223, 47%, 23%)
-
-## Typography
-
-### Body Copy
-
-- Font size (paragraph): 16px
-
-### Font
-
-- Family: [Red Hat Display](https://fonts.google.com/specimen/Red+Hat+Display)
-- Weights: 500, 700, 900 
-*/
